--- a/CryptoCactus.WebAPI/wwwroot/btc.html
+++ b/CryptoCactus.WebAPI/wwwroot/btc.html
@@ -1,59 +1,53 @@
 ﻿<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>График цены криптовалюты</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-    <h1>График цены Bitcoin</h1>
+<html>
+    <head>
+        <link rel="stylesheet" href="tableStyle.css">
+    </head>
+    </head>
+    <body>
+        <h1><span class="blue">&lt;</span>Table<span class="blue">&gt;</span> <span class="yellow">Responsive</pan></h1>
+        <h2>Created with love by <a href="https://github.com/pablorgarcia" target="_blank">Pablo García</a></h2>
 
-    <canvas id="myChart"></canvas>
+        <table class="container">
+            <thead>
+                <tr>
+                    <th><h1>Sites</h1></th>
+                    <th><h1>Views</h1></th>
 
-    <script>
-        // Настройка параметров API и криптовалюты
-        const apiUrl = 'https://api.coingecko.com/api/v3/coins/bitcoin/market_chart/range?vs_currency=usd&from=1640995200&to=1672531200';
-        const currency = 'BTC';
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Google</td>
+                    <td>9518</td>
 
-        // Получение данных с API
-        fetch(apiUrl)
-            .then(response => response.json())
-            .then(data => {
-                // Извлечение данных цены и даты
-                const prices = data.prices.map(item => ({
-                    date: new Date(item[0]).toLocaleDateString(), // Форматирование даты
-                    price: item[1]
-                }));
+                </tr>
+                <tr>
+                    <td>Twitter</td>
+                    <td>7326</td>
 
-                // Создание графика с Chart.js
-                const chartCanvas = document.getElementById('myChart');
-                const chart = new Chart(chartCanvas, {
-                    type: 'line',
-                    data: {
-                        labels: prices.map(item => item.date),
-                        datasets: [{
-                            label: Цена ${ currency }(USD),
-                            data: prices.map(item => item.price),
-                            borderColor: 'blue',
-                            borderWidth: 1
-                            }]
-                },
-                    options: {
-                    scales: {
-                        x: {
-                            type: 'time'
-                        },
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-                    });
-                })
-                .catch (error => {
-            console.error('Ошибка при получении данных:', error);
-        });
-    </script>
-</body>
+                </tr>
+                <tr>
+                    <td>Amazon</td>
+                    <td>4162</td>
+
+                </tr>
+                <tr>
+                    <td>LinkedIn</td>
+                    <td>3654</td>
+
+                </tr>
+                <tr>
+                    <td>CodePen</td>
+                    <td>2002</td>
+
+                </tr>
+                <tr>
+                    <td>GitHub</td>
+                    <td>4623</td>
+
+                </tr>
+            </tbody>
+        </table>
+    </body>
 </html>
