--- a/CryptoCactus.WebAPI/wwwroot/eth.html
+++ b/CryptoCactus.WebAPI/wwwroot/eth.html
@@ -2,10 +2,28 @@
 <html>
 <head>
     <link rel="stylesheet" href="tableStyle.css">
+    <style>
+        .fade-in {
+            opacity: 0; /* начальное значение непрозрачности */
+            animation: fadeIn ease-in 1; /* добавляем анимацию fadeIn */
+            animation-fill-mode: forwards; /* будет видимым после завершения анимации */
+            animation-duration: 1s; /* длительность анимации в 1 секунду */
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1><span class="blue">&lt;</span>ETH<span class="blue">&gt;</span> <span class="yellow">Price</span></h1>
-    <h2>Progect EVA</h2>
+    <h1 class="fade-in"><span class="blue">&lt;</span>ETH<span class="blue">&gt;</span> <span class="yellow">Price</span></h1>
+    <h2 class="fade-in">Progect EVA</h2>
 
     <table class="container">
         <thead>
@@ -28,8 +46,8 @@
                 <td id="HTX"></td>
             </tr>
             <tr class="row">
-                <td>UnlimBotX</td>
-                <td id="UnlimBotX"></td>
+                <td>BingX</td>
+                <td id="BingX"></td>
             </tr>
             <tr class="row">
                 <td>BitGet</td>
@@ -57,8 +75,8 @@
             document.getElementById('Bybit').innerText = data[0];
             document.getElementById('Okx').innerText = data[1];
             document.getElementById('HTX').innerText = data[2];
-            document.getElementById('BitGet').innerText = data[3];
-            document.getElementById('UnlimBotX').innerText = data[4];
+            document.getElementById('BingX').innerText = data[3];
+            document.getElementById('BitGet').innerText = data[4];
             document.getElementById('Kucoin').innerText = data[5];
             document.getElementById('Huobi').innerText = data[6];
         });
