--- a/CryptoCactus.WebAPI/wwwroot/index.html
+++ b/CryptoCactus.WebAPI/wwwroot/index.html
@@ -5,52 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypto Tracker</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f4f4f4;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            margin: 0;
-        }
-
-        h1 {
-            color: #333;
-            margin-bottom: 30px;
-        }
-
-        .container {
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 30px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-
-        a {
-            display: inline-block;
-            padding: 15px 30px;
-            background-color: #007bff;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            margin: 10px;
-            transition: background-color 0.3s;
-        }
-
-            a:hover {
-                background-color: #0056b3;
-            }
-    </style>
+    <link rel="stylesheet" href="animation.css" />
 </head>
 <body>
     <div class="container">
         <h1>Crypto Tracker</h1>
-        <a href="btc.html">BTC</a>
-        <a href="eth.html">ETH</a>
+        <select id="crypto-selector">
+            <option value="#">Выберите криптовалюту</option>
+            <option value="/crypto?currency=BTC">BTC</option>
+            <option value="/crypto?currency=ETH">ETH</option>
+        </select>
     </div>
+    <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </body>
 </html>
